tests/ui/endpoint/too_few_args.stderr
error: Too few arguments
 --> tests/ui/endpoint/too_few_args.rs:9:4
  |
9 | fn read() {}
  |    ^^^^

error[E0412]: cannot find type `read___gotham_restful_endpoint` in this scope
 --> tests/ui/endpoint/too_few_args.rs:4:10
  |
4 | #[derive(Resource)]
  |          ^^^^^^^^ not found in this scope
  |
  = note: this error originates in the derive macro `Resource` (in Nightly builds, run with -Z macro-backtrace for more info)
